--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crossr</title>
   <link rel="icon" type="image/png" href="Add_a_heading_11.png">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --main-bg: #ffffff;
@@ -732,8 +732,7 @@
   <header>
     <div class="navbar">
       <span class="logo">
-        <img class="logo-img" src="Add_a_heading_11.png" alt="Crossr Logo" />
-        
+        Crossr
       </span>
       <nav>
         <a href="#intro">Intro</a>
